fixed layout issues in comparison modal and outfit section using grid

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -55,21 +55,23 @@ nav {
   top: 30%;
   left: 30%;
   padding: 10px;
+  text-align: center;
 
   .modal-title {
     padding: 0px;
 
+    h3 {
+      text-align: center;
+      margin-bottom: 0;
+      padding-bottom: 0;
+      padding: 0;
+    }
+
     h4 {
+      text-align: left;
       margin: 0;
       font-weight: 100;
     }
-  }
-
-  .comparison-modal-titlebox {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
   }
 
   .comparison-modal-table {
@@ -80,10 +82,10 @@ nav {
   }
 
   .comparison-modal-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     width: 90%;
     margin-bottom: 5px;
+    padding: 0;
   }
 }
